--- a/sample_code/index.html
+++ b/sample_code/index.html
@@ -6,6 +6,7 @@
 
     <script src="./libraries/CCapture.all.min.js"></script>
     <script src="./libraries/p5.min.js"></script>
+    <script src="./libraries/p5.sound.min.js"></script>
 
     <script src="./my_vignettes.js"></script>
     <script src="./libraries/interactive-vignettes.bundle.js"></script>
